# optimizer-api-crypto

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
app/aggregator/: constants.py  gas.py  lifi.py  oneinch.py
app/api/: discovery.py  routes.py
app/optimizer/: models.py  tec.py
app/payment/: coinos.py  l402.py
composio/: integrations.yaml
mcp/: __init__.py  claude_desktop_config.example.json  server.json  server.py
tests/: test_aggregators.py  test_payment.py  test_tec.py
vercel-registry/: cross-chain-optimizer.ts
